--- a/index.html
+++ b/index.html
@@ -5,29 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Adventure</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/cddfdb2471.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- <h1>
+    <script defer src="script.js"></script>
+     <h1>
         Chapter One: The Escape
-    </h1> -->
+    </h1> 
     <div class="container">
 
         <div id="masterText">
-            Lord Scarr
+            The year is 4067. As the renowned commander
+             of the Renegade, you’re tasked with 
+             transporting a dark energy tesseract from 
+             the star system of Andretti to the star 
+             system of Fúsille, where your team of 
+             virtuous vigilantes will have it properly 
+             destroyed. <br> <br>
+             However, the malicious Lord Scarr and his
+              battalion will stop at nothing to ensure
+               he acquires this tesseract. Such power 
+               at his hands can spell disaster for the 
+        solar system, and even worse, the <span style="color: red;"> universe</span>…
         </div>
-
+            
         <div id="option-buttons" class="btn-grid">
-           <button class="btn">Option 1</button>
-           <button class="btn">Option 2</button>
-           <button class="btn">Option 3</button>
-           <button class="btn">Option 4</button>
-        </div>
+           <button class="btn" id="btn1">Attempt to navigate the daunting asteroid field</button>
+           <button class="btn" id="btn2"></button>
+           <button class="btn" id="btn3"></button>
+           <button class="btn" id="btn4"></button>
 
+
+
+        </div>
     </div>
-    <!-- <div>
-    <button class="resetBtn"style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">RESET</button>
+     <div>
+    <button class="resetBtn" id="resetBtn" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">RESET</button>
     </div>
 </body>
-</html> -->
+</html> 
