--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script defer src="script.js"></script>
      <h1>
         Chapter One: The Escape
     </h1> 
@@ -29,7 +28,7 @@
         </div>
             
         <div id="option-buttons" class="btn-grid">
-           <button class="btn" id="btn1">Attempt to navigate the daunting asteroid field</button>
+           <button class="btn" id="btn1">ACCEPT MISSION</button>
            <button class="btn" id="btn2"></button>
            <button class="btn" id="btn3"></button>
            <button class="btn" id="btn4"></button>
@@ -41,5 +40,6 @@
      <div>
     <button class="resetBtn" id="resetBtn" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">RESET</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html> 
