--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
            <button class="btn" id="btn2"></button>
            <button class="btn" id="btn3"></button>
            <button class="btn" id="btn4"></button>
-
-
+           <button class="btn" id="btn5"></button>
+           <button class="btn" id="btn6"></button>
+           <button class="btn" id="btn7"></button>
+           <button class="btn" id="btn8"></button>
+           <button class="btn" id="btn9"></button>
+           <button class="btn" id="btn10"></button>
+           <button class="btn" id="btn11"></button>
+           <button class="btn" id="btn12"></button>
+           <button class="btn" id="btn13"></button>
+           <button class="btn" id="btn14"></button>
+           <button class="btn" id="btn15"></button>
+           <button class="btn" id="btn16"></button>
 
         </div>
     </div>
