--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
            <button class="btn" id="btn14"></button>
            <button class="btn" id="btn15"></button>
            <button class="btn" id="btn16"></button>
+           <button class="btn" id="btn17"></button>
 
         </div>
     </div>
